Landing-dev - fixed functionality section clipping values section when opened while on smaller screen size

--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -275,6 +275,12 @@ justify-content: center;
     align-items: center;
     column-gap: 1rem;
 }
+.func-container.space{
+    height: 100rem;
+}
+.func-container.nospace{
+    height: auto;
+}
 .func-info-container{
     height: 67rem;
 }
@@ -638,15 +644,6 @@ justify-content: center;
 }
 /* CTA */
 .cta-container{
-        --mask:
-          radial-gradient(67.53px at 50% 92.75px,#000 99%,#0000 101%) calc(50% - 70px) 0/140px 51% repeat-x,
-          radial-gradient(67.53px at 50% -57.75px,#0000 99%,#000 101%) 50% 35px/140px calc(51% - 35px) repeat-x,
-          radial-gradient(67.53px at 50% calc(100% - 92.75px),#000 99%,#0000 101%) calc(50% - 70px) 100%/140px 51% repeat-x,
-          radial-gradient(67.53px at 50% calc(100% + 57.75px),#0000 99%,#000 101%) 50% calc(100% - 35px)/140px calc(51% - 35px) repeat-x;
-        -webkit-mask: var(--mask);
-                mask: var(--mask);
-      
-    background: linear-gradient(to right, #fff,rgba(9, 133, 227, 0.60),rgba(9, 133, 227, 0.60),#fff);
 
     max-width: 100vw;
     min-height: 50rem;
@@ -656,6 +653,25 @@ justify-content: center;
 
     margin:0 auto;
     padding: 5rem 1rem;
+}
+.cta-bg{
+    justify-content: center;
+
+        position: relative;
+    overflow: hidden;
+
+    max-width: 100vw;
+    min-height: 50rem;
+    --mask:
+    radial-gradient(67.53px at 50% 92.75px,#000 99%,#0000 101%) calc(50% - 70px) 0/140px 51% repeat-x,
+    radial-gradient(67.53px at 50% -57.75px,#0000 99%,#000 101%) 50% 35px/140px calc(51% - 35px) repeat-x,
+    radial-gradient(67.53px at 50% calc(100% - 92.75px),#000 99%,#0000 101%) calc(50% - 70px) 100%/140px 51% repeat-x,
+    radial-gradient(67.53px at 50% calc(100% + 57.75px),#0000 99%,#000 101%) 50% calc(100% - 35px)/140px calc(51% - 35px) repeat-x;
+  -webkit-mask: var(--mask);
+          mask: var(--mask);
+          
+    animation: moveMask 10s linear infinite;
+    background: linear-gradient(to right, rgba(255,255,255,0.1),rgba(9, 133, 227, 0.60),rgba(9, 133, 227, 0.60),rgb(255, 255, 255,0.1));
 }
 .cta-content{
     gap:8rem;
@@ -679,7 +695,35 @@ justify-content: center;
     color:#fff;
     box-shadow: inset #fff 0px 0px 0px 2px ;
 }
+@keyframes moveMask {
+    from {
+        -webkit-mask-position:
+            calc(50% - 70px) 0,
+            50% 35px,
+            calc(50% - 70px) 100%,
+            50% calc(100% - 35px);
 
+        mask-position:
+            calc(50% - 70px) 0,
+            50% 35px,
+            calc(50% - 70px) 100%,
+            50% calc(100% - 35px);
+    }
+
+    to {
+        -webkit-mask-position:
+            calc(50% - 70px - 140px) 0,
+            calc(50% - 140px) 35px,
+            calc(50% - 70px - 140px) 100%,
+            calc(50% - 140px) calc(100% - 35px);
+
+        mask-position:
+            calc(50% - 70px - 140px) 0,
+            calc(50% - 140px) 35px,
+            calc(50% - 70px - 140px) 100%,
+            calc(50% - 140px) calc(100% - 35px);
+    }
+}
 /* FOOTER */
 #footer{
     background:linear-gradient(#fff,rgba(9, 133, 227, 0.60));
