--- a/public/css/welcome.queries.css
+++ b/public/css/welcome.queries.css
@@ -1,9 +1,15 @@
+@media (prefers-reduced-motion: reduce) {
+    .cta-bg {
+        animation: none;
+    }
+}
 /* 1585px */
 @media(max-width:99em){
     /* HEAD */
     .header-footprints{
         min-height: 40%;
     }
+    /* FUNCTIONALITY */
     /* VALUES */
     .values{
         display: flex;
@@ -16,13 +22,15 @@
     }
     /* CTA */
     .heading-secondary#cta-heading{
-        font-weight:700;
         font-size: 8rem;
     }
 }
 /* 1231px */
 @media(max-width:77em){
     /* HEAD */
+    .header-section{
+        min-height: auto;
+    }
     .heading-primary{
         font-size: 14rem;
         line-height: 14rem;
@@ -35,17 +43,23 @@
     .header-footprints{
         min-height: 30%;
     }
+    /* PARTNERS */
+    .partners-container{
+        margin: var(--section-spacing);
+    }
     /* ABOUT */
     .about-container{
         display: flex;
         flex-direction: column-reverse;
         gap: 6rem;
+        margin: 0 auto;
     }
     /* ENLARGING IMAGE */
     .placeholder#about-img{
         width: 60rem;
         height: 60rem;
     }
+    /* VALUES */
     /* FUNCTIONALITY */
     .func-container{
         display: flex;
@@ -63,13 +77,13 @@
         display: block;
     }
     /* FAQ */
+    .faq-container{
+        min-height: 100rem;
+    }
     .question-nbr.spaceBottom{
         margin-bottom:18rem;
     }
     /* CTA */
-    .cta-container{
-        background: linear-gradient(to right, rgba(9, 133, 227, 0.3),rgba(9, 133, 227, 0.60),rgba(9, 133, 227, 0.60),rgba(9, 133, 227, 0.3));
-    }
     .heading-secondary#cta-heading{
         font-size: 6rem;
         text-align: center;
